# ExistOS-For-HP39GII

apps/: CMakeLists.txt  llapi.c  llapi.h
apps/emu48/: CMakeLists.txt  MacWinAPIPatch.h  app_config.h  emu48_display.c  emu48_file.c  emu48_porting.c  emu48_timer.c  main.c
apps/emu48/core/: emu48.h  mops.c  ops.h
apps/faultTask/: main.c
apps/gameboy/: CMakeLists.txt  main.c
apps/gameboy/gb/: CMakeLists.txt  lcd.c  main.c  mem.c  rom.c  sdl.c
apps/helloworld/: CMakeLists.txt  main.c
apps/khicas/: main.c  porting.cpp
apps/riscvsim/: CMakeLists.txt  debug.c  decode.c  decode.h  jit-gen-arm.c  jit-gen-arm.h  jit-rules-arm.h  main.c  mem.h  memory.c  opcode_str.h  simulator.c  simulator.h
apps/riscvsim/testCode/coremark/: CMakeLists.txt  LLLapi.c  LLLapi.h  init.c  ld.lds  main.c  stub.c
apps/riscvsim/testCode/coremark/cm/: core_main.c  core_portme.c  core_portme.h
apps/riscvsim/testCode/test1/: CMakeLists.txt  ld.lds  main.c  pr.c
boot0/: main.c
boot0/bsp/: nand.c
boot1/: config.h  exception.c  libc.c  main.c  mm.c  mm.h  stub.c
boot1/script/: ld.lds
system/: CMakeLists.txt  FreeRTOSConfig.h  app_runtime.c  app_runtime.h  exception.c  gdbserver.c  httpd.c  hypercall.c  hypercall.h  main.c  sideload_server.c
system/FreeRTOS/: tasks.c
system/FreeRTOS/include/: task.h
system/bsp/: board.c  board.h  clk.c  display.c
system/script/: ld.lds
